<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.HomeScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#BBDEFD"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Inlog_Titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/appNaam"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/HomeScreen_Aquarium_Knop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/aquariums" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/HomeScreen_Vissen_Knop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/vissen" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/HomeScreen_Gegevens_Knop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/mijnGegevens" />

    </LinearLayout>

</LinearLayout>